<resources>
    <string name="app_name">PureScene</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scene">景点</string>
    <string name="map">地图</string>
    <string name="about">相关</string>
    <string name="search_hint">例如输入：泰山</string>
    <string name="cancel_text">取消</string>
    <string name="map_type">地图类型</string>
    <string name="map_setting">地图设置(可多选)</string>
    <string name="normal_map">2d平面图</string>
    <string name="satellite_map">卫星图</string>
    <string name="situation">路况</string>
    <string name="temperature">热力图</string>
    <string name="map_option">图层</string>
    <string name="search_route_hint">点击查找路线</string>
    <string name="now_location">我的位置</string>
    <string name="type_start">输入起点，例如：南昌 梅岭</string>
    <string name="type_end">输入终点，例如：九江 庐山</string>
    <string name="walking">步行</string>
    <string name="riding">骑行</string>
    <string name="driving">驾车</string>
    <string name="search_route">查看路线</string>
    <string name="enjoy_pic">景点美图欣赏</string>
    <string name="navigation">开始导航</string>
</resources>
