<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ImageText="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:text="@string/map_type"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <com.example.purescene.widget.ImageText
            android:id="@+id/normal_map_image_text"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            ImageText:image="@drawable/normalmap"
            ImageText:image_width="100dp"
            ImageText:image_height="100dp"
            ImageText:text="@string/normal_map"
            ImageText:text_size="15sp"
            ImageText:text_color="@color/colorBlack"
            ImageText:clicked="true"/>

        <com.example.purescene.widget.ImageText
            android:id="@+id/satellite_map_image_text"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            ImageText:image="@drawable/satelmap"
            ImageText:image_width="100dp"
            ImageText:image_height="100dp"
            ImageText:text="@string/satellite_map"
            ImageText:text_size="15sp"
            ImageText:text_color="@color/colorShineBlack"
            ImageText:clicked="false"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:text="@string/map_setting"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <com.example.purescene.widget.ImageText
            android:id="@+id/situation_image_text"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            ImageText:image="@drawable/situation"
            ImageText:image_width="100dp"
            ImageText:image_height="100dp"
            ImageText:text="@string/situation"
            ImageText:text_size="15sp"
            ImageText:text_color="@color/colorBlack"
            ImageText:clicked="true"/>

        <com.example.purescene.widget.ImageText
            android:id="@+id/temperature_image_text"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            ImageText:image="@drawable/teme"
            ImageText:image_width="100dp"
            ImageText:image_height="100dp"
            ImageText:text="@string/temperature"
            ImageText:text_size="15sp"
            ImageText:text_color="@color/colorShineBlack"
            ImageText:clicked="false"/>

    </LinearLayout>


</LinearLayout>