<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ImageText="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/search"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/start_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"
                    android:hint="@string/type_start"
                    android:text="@string/now_location"/>

                <EditText
                    android:id="@+id/end_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"
                    android:hint="@string/type_end"/>

            </LinearLayout>

            <TextView
                android:id="@+id/cancel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cancel_text"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.purescene.widget.ImageText
                android:id="@+id/walking_image_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                ImageText:image="@drawable/walk"
                ImageText:image_width="20dp"
                ImageText:image_height="20dp"
                ImageText:text="@string/walking"
                ImageText:text_size="10sp"
                ImageText:text_color="@color/colorBlack"
                ImageText:clicked="true"/>

            <com.example.purescene.widget.ImageText
                android:id="@+id/biking_image_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                ImageText:image="@drawable/ride"
                ImageText:image_width="20dp"
                ImageText:image_height="20dp"
                ImageText:text="@string/riding"
                ImageText:text_size="10sp"
                ImageText:text_color="@color/colorShineBlack"/>

            <com.example.purescene.widget.ImageText
                android:id="@+id/driving_image_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                ImageText:image="@drawable/drive"
                ImageText:image_width="20dp"
                ImageText:image_height="20dp"
                ImageText:text="@string/driving"
                ImageText:text_size="10sp"
                ImageText:text_color="@color/colorShineBlack" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/route_map_framelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"/>

        <FrameLayout
            android:id="@+id/navi_framelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="15dp"
            android:background="@color/colorWhite"
            android:visibility="gone">

            <com.example.purescene.widget.ImageText
                android:id="@+id/navi_image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ImageText:image="@drawable/navigation"
                ImageText:image_width="40dp"
                ImageText:image_height="40dp"
                ImageText:text="@string/navigation"
                ImageText:text_size="20sp"
                ImageText:text_color="@color/colorBlack" />

        </FrameLayout>

    </FrameLayout>

</LinearLayout>